--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
    </header>
    <Section>
        <h1>MacBook Pro</h1>
+    <div>
     <p>More Power.
     <br>More performance.
-    <br>More pro.</p>
+    <br>More pro.</p> 
+    </div>
     <img class="macbookpro" src="macbookpro.png" alt="macbookpro">
     <p>The new MacBook Pro can be yours. </p>
     <p>
@@ -24,7 +26,7 @@
         <p>This offer is only open for one week, the first limited number of subscribers to accept the offer once open will recieve the latest MacBook Pro. 
     </p>
     <button class="button">Sign Up</button>
-    <p>More affordable.</p> 
+    <p class="callout">More affordable.</p> 
    </Section>
    
 </body>
