--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img class="macbookpro" src="macbookpro.png" alt="macbookpro">
     <p>The new MacBook Pro can be yours. </p>
     <p>
-        <br>This month Apple is offering the newest MacBook Pro for $120 per month.
+        <br>Apple is offering the newest MacBook Pro for $120 per month.
         You can sign up to get more information and be the first to know when the offer opens.</p>
         <p>This offer is only open for one week, the first limited number of subscribers to accept the offer once open will recieve the latest MacBook Pro. 
     </p>
